<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Landinfo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="mainActLab">Search for country: </string>
    <string name="btntxt">Search</string>

    <string name="title_activity_result">Search result</string>
    <string name="title_activity_json_results">JsonResults</string>
    <string name="title_activity_result_detail">Country information</string>
    <string name="name_label">Country name:</string>
    <string name="native_name_label">Native name:</string>
    <string name="demonym_name_label">Demonym:</string>
    <string name="capital_label">Capital:</string>
    <string name="region_label">Region:</string>
    <string name="subregion_label">Subregion:</string>
    <string name="population_label">Population:</string>
    <string name="area_label">Area:</string>
    <string name="calling_code_label">Calling Code:</string>
    <string name="currencies_label">Currencies:</string>
    <string name="top_level_domain_label">Top Level Domain:</string>
    <string name="search_not_found">Sorry, no match for your search was found</string>

</resources>
