<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.landinfogruppen.landinfo.ResultDetail">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_label"
                android:id="@+id/textView"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Data"
                android:id="@+id/textview_name"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/native_name_label"
                android:id="@+id/textView1"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Data"
                android:id="@+id/textview_native_name"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textStyle="bold" />
            </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demonym_name_label"
                android:id="@+id/textView2"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Data"
                android:id="@+id/textview_demonym"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textStyle="bold" />
            </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capital_label"
                android:id="@+id/textView3"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Data"
                android:id="@+id/textview_capital"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textStyle="bold" />
            </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region_label"
                android:id="@+id/textView4"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Data"
                android:id="@+id/textview_region"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textStyle="bold" />
            </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subregion_label"
                android:id="@+id/textView5"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Data"
                android:id="@+id/textview_subregion"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textStyle="bold" />
            </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/population_label"
                android:id="@+id/textView6"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Data"
                android:id="@+id/textview_population"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textStyle="bold" />
            </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area_label"
                android:id="@+id/textView7"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Data"
                android:id="@+id/textview_area"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textStyle="bold" />
            </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calling_code_label"
                android:id="@+id/textView8"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Data"
                android:id="@+id/textview_calling_code"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textStyle="bold" />
            </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currencies_label"
                android:id="@+id/textView9"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Data"
                android:id="@+id/textview_currencies"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textStyle="bold" />
            </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_level_domain_label"
                android:id="@+id/textView10"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Data"
                android:id="@+id/textview_top_level_domain"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>
</RelativeLayout>
